<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvCurrentWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text="40c"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/now"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/navigation"
        android:layout_width="16dp"
        android:layout_height="25dp"
        android:layout_marginTop="27dp"
        android:layout_marginStart="29dp"
        android:src="@drawable/navigation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        tools:text="Name"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/navigation"
        />

    <TextView
        android:id="@+id/now"
        android:text="@string/now"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageview"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/today"
        android:text="@string/today"
        android:layout_marginTop="10dp"
        android:layout_marginStart="65dp"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/now"
        app:layout_constraintTop_toBottomOf="@id/imageview"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="20dp"
        android:text="@string/cloud"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentWeather"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvWeatherMax"
        android:text="40"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="109dp"
        app:layout_constraintTop_toBottomOf="@id/today"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvWeatherMin"
        android:text="40"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="195dp"
        app:layout_constraintTop_toBottomOf="@id/today"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="109dp"
        android:text="@string/max"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherMax"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="195dp"
        android:text="@string/min"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherMin"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginStart="19dp"
        android:text="@string/this_week"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/wind"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="194dp"
        android:text="@string/pressure"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/week"
        android:orientation="horizontal"
        tools:listitem="@layout/item_forecast"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/wind"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="194dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/wind"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/humidity"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvPressure"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="194dp"
        android:text="@string/cloudiness"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvPressure"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvCloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="194dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/cloudiness"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/sunrise"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvHumidity"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="194dp"
        android:text="@string/sunset"
        android:textSize="12sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/tvCloudiness"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvSunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/sunrise"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvSunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="40c"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="194dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/sunset"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/service"
        android:text="Сервис"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button_stroke"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>